[package]
name = "motorx"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
motorx-core = { path = "motorx-core", default-features = false, features = ["serde-config", "logging"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "parking_lot"] }
tracing = { workspace = true }

tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"], optional = true }

tokio_wasi = { workspace = true, features = ["rt", "macros"], optional = true }

[features]
default = ["tokio", "motorx-core/default"]
wasm = ["tokio_wasi", "motorx-core/wasm"]

[profile.release]
#debug = true

[workspace]
members = [
	"motorx-core",
	"."
]

[workspace.dependencies]
tokio = "1.21.2"
tokio_wasi = "1.21.3"
tracing = "0.1"
