[package]
name = "motorx"
version = "0.0.2"
edition = "2021"
authors = ["Isaiah Gamble <itg.2048@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["http", "server", "reverse-proxy"]
repo = "https://github.com/tsar-boomba/motorx"
readme = "README.md"
publish = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
motorx-core = { path = "motorx-core", default-features = false, features = ["serde-config", "logging", "tls"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "parking_lot"] }
tracing = { workspace = true }

tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"], optional = true }

tokio_wasi = { workspace = true, features = ["rt", "macros"], optional = true }

[features]
default = ["tokio", "motorx-core/default"]
wasm = ["tokio_wasi", "motorx-core/wasm"]

[profile.release]
#debug = true

[workspace]
members = [
	"motorx-core",
	"."
]

[workspace.dependencies]
tokio = "1.21.2"
tokio_wasi = "1.21.3"
tracing = "0.1"
