[package]
name = "motorx"
version = "0.0.17"
edition = "2021"
authors = ["Isaiah Gamble <itg.2048@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["http", "server", "reverse-proxy"]
homepage = "https://github.com/tsar-boomba/motorx"
repository = "https://github.com/tsar-boomba/motorx"
readme = "README.md"
description = "A reverse-proxy in pure rust."

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.release]
pre-release-hook = ["./tools/changelog.sh"]

[dependencies]
motorx-core = { path = "motorx-core", version = "0.0.17", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "parking_lot"] }
tracing = { workspace = true }

tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[profile.release]
#debug = true
codegen-units = 1
lto = "fat"

[workspace]
members = [
	"motorx-core",
	"."
]

[workspace.dependencies]
tokio = "1.43.0"
tracing = "0.1.41"
