[package]
name = "echo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.1", features = ["full"] }
http-body = "1.0.0-rc.1"
http-body-util = "0.1.0-rc.1"
bytes = "1.2.1"
http = "0.2.8"
tokio = { version = "1.21.2", features = ["net", "rt", "macros", "rt-multi-thread", "parking_lot"] }
regex = "1.7.0"
once_cell = { version = "1.16.0", features = ["parking_lot"] }
thiserror = "1.0.37"

[workspace]
