[package]
name = "echo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
http-body = "1.0.1"
http-body-util = "0.1.2"
bytes = "1.8.0"
http = "1.1.0"
tokio = { version = "1.41.0", features = ["net", "rt", "macros", "rt-multi-thread", "parking_lot"] }
regex = "1.11.1"
once_cell = { version = "1.20.2", features = ["parking_lot"] }
thiserror = "2.0.0"

[workspace]
