[package]
name = "motorx-core"
version = "0.0.6"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["http", "server", "reverse-proxy"]
homepage = "https://github.com/tsar-boomba/motorx"
repository = "https://github.com/tsar-boomba/motorx"
readme = "README.md"
publish = true
description = "Build your own motorx binary."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body = "1.0.0-rc.1"
http-body-util = "0.1.0-rc.1"
bytes = "1.3"
http = "0.2.8"
regex = "1.7"
once_cell = { version = "1.17.0", features = ["parking_lot"] }
thiserror = "1"

# default
tokio = { workspace = true, features = ["net", "rt", "macros", "parking_lot"], optional = true }
hyper = { version = "1.0.0-rc.1", features = ["full"], optional = true }

# wasm
tokio_wasi = { workspace = true, features = ["net", "rt", "macros", "parking_lot"], optional = true }

# uncomment when hyper v1 officially drops
#hyper_wasi = { git = "https://github.com/WasmEdge/hyper", branch = "v1.0.0", features = ["full"], optional = true }

hyper_wasi = { version = "0.15.0", features = ["full"], optional = true }
wasmedge_wasi_socket = { version = "0.4", optional = true }

# logging feature
tracing = { workspace = true, optional = true }

# tls feature
rustls-native-certs = { version = "0.6", optional = true }
rustls = { version = "0.20", default-features = false, optional = true }
rustls-pemfile = { version = "1.0", optional = true }
tokio-rustls = { version = "0.23", default-features = false, optional = true  }
webpki-roots = { version = "0.22", optional = true }
futures-util = { version = "0.3", optional = true }

# json-config feature
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
http-serde = { version = "1.1.2", optional = true }

[dev-dependencies]
axum = "0.6" # for servers to proxy to in tests
reqwest = "0.11" # to send request to proxy in tests
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[features]
default = ["tokio", "hyper"]
full = ["logging", "serde-config", "tls"]

logging = ["tracing"]

serde-config = ["serde", "serde_json", "http-serde"]

tls = ["rustls", "rustls-native-certs", "rustls-pemfile", "tokio-rustls", "webpki-roots", "futures-util"]
wasm = ["hyper_wasi", "tokio_wasi", "wasmedge_wasi_socket"]
