[package]
name = "motorx-core"
version = "0.0.12"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["http", "server", "reverse-proxy"]
homepage = "https://github.com/tsar-boomba/motorx"
repository = "https://github.com/tsar-boomba/motorx"
readme = "README.md"
publish = true
description = "Build your own motorx binary."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body = "1.0.1"
http-body-util = "0.1.2"
bytes = "1.8.0"
http = "1.1.0"
regex = "1.11.1"
once_cell = { version = "1.20.2", features = ["parking_lot"] }
thiserror = "2.0.0"
tokio = { workspace = true, features = ["net", "rt", "macros", "parking_lot"] }
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["tokio", "http1", "http2", "server"] }

# logging feature
tracing = { workspace = true, optional = true }

# tls feature
rustls-native-certs = { version = "0.8.1", optional = true }
rustls = { version = "0.23.21", default-features = false, optional = true, features = ["ring"] }
rustls-pemfile = { version = "2.2.0", optional = true }
tokio-rustls = { version = "0.26.1", default-features = false, optional = true  }
webpki-roots = { version = "0.26.7", optional = true }
futures-util = { version = "0.3.31", optional = true }

# json-config feature
serde = { version = "1.0.217", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.137", optional = true }
http-serde = { version = "2.1.1", optional = true }
itertools = "0.14.0"
tokio-util = "0.7.13"
slab = "0.4.9"

[dev-dependencies]
reqwest = { version = "0.12.12", features = ["rustls-tls"] } # to send request to proxy in tests
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rcgen = { version = "0.13.2" }
tempfile = "3.15.0"
maplit = "1.0.2"

[features]
full = ["logging", "serde-config", "tls"]

logging = ["tracing"]

serde-config = ["serde", "serde_json", "http-serde"]

tls = ["rustls", "rustls-native-certs", "rustls-pemfile", "tokio-rustls", "webpki-roots", "futures-util"]
